<resources>
    <string name="app_name">BlogTalk</string>
    <string name="agora_chat_app_key">411426730#1627211</string>
    <string name="firebase_key">831945510246</string>
    <string name="default_web_client_id">831945510246-m7bl28kpshsmkt9t6t5c2cen231l8f1a.apps.googleusercontent.com</string>
    <string name="onesignal_app_id">b985fe5c-a7c3-455c-a956-f1d0555fa717</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="applovin_id">FBZJ_9VAbH95a0MVJsIldv-Twlc8JBmTNKtNTMX3eh9DhVk_M0k-viWpS7ymJiJg1A2VXaZAGiOyC6yT6gX0N2</string>
    <string name="privacy_policy_url">https://play.google.com/store/apps/developer?id=blogtalk.com</string>
    <string name="play_more_apps">https://play.google.com/store/apps/developer?id=blogtalk.com</string>
    <string name="isRTL">false</string>
    <string name="intro_title_1">BlogTalk App</string>
    <string name="intro_title_2">Unleash Your Social World</string>
    <string name="intro_title_3">Connect With Users</string>
    <string name="intro_description_1"><![CDATA[Experience a new era of social networking with our app, offering seamless communication, personalized content, and a dynamic platform for expressing yourself]]></string>
    <string name="intro_description_2"><![CDATA[Revolutionize your social experience with our app, combining sleek design and smart features to elevate your interactions and keep you effortlessly connected]]></string>
    <string name="intro_description_3">Join the community where every connection matters</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="ok">OK</string>
    <string name="try_again">Try Again</string>
    <string name="skip">Skip</string>
    <string name="get_started">Get Started</string>
    <string name="continue_">Continue</string>
    <string name="select_language">Select Your Language</string>
    <string name="select_lang_info">In this app, You can select your the dearest language you see status. If you have not selected your dear language, then all languages are shown.</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="signin_to_continue">Sign in to continue</string>
    <string name="or_continue_with">or continue with</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="verification_code">Verification Code</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_message">Enter your valid email address below and we will send you email with instructions on how to change your password</string>
    <string name="login">Login</string>
    <string name="read_terms">I have read and agree to the</string>
    <string name="terms_of_use">Terms Of Use</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="submit">Submit</string>
    <string name="loading">Loading..</string>
    <string name="error_password_sort">This password is too short</string>
    <string name="pass_end_space">Please do not add space at end</string>
    <string name="cannot_empty">Field cannot be empty</string>
    <string name="agree_terms">Agree to terms and conditions before login</string>
    <string name="name">Name</string>
    <string name="phoneNo">Phone No</string>
    <string name="reference_code">Reference Code</string>
    <string name="register">Register</string>
    <string name="registering">Registering..</string>
    <string name="enter_name">Please Enter Name</string>
    <string name="enter_email">Please Enter Email</string>
    <string name="enter_password">Please Enter Password</string>
    <string name="error_unauth_access">Unauthorized Access</string>
    <string name="send">Send</string>
    <string name="home">Home</string>
    <string name="video">Video</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="allow_noti_per">Allow Permission from app setting page</string>
    <string name="noti_permissions">Notification Permission</string>
    <string name="allow">Allow</string>
    <string name="needs_permissions">Please allow notification permission to receive notification for latest updates</string>
    <string name="err_no_data_found">No Data Found</string>
    <string name="err_server_error">Server Error</string>
    <string name="err_internet_not_connected">Please connect to internet</string>
    <string name="err_server_no_conn">Server not connected</string>
    <string name="err_connect_net_tryagain">Please connect to internet and try again</string>
    <string name="err_login_google">Error while login with google</string>
    <string name="err_invalid_email">Invalid Email</string>
    <string name="err_unauth_access">Unauthorized Access</string>
    <string name="follow">Follow</string>
    <string name="posts">Posts</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="more">More</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="select_image">Select Image</string>
    <string name="enable_push_notification">Enable Push Notification</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="more_app">More App</string>
    <string name="logout">Logout</string>
    <string name="about_us">About Us</string>
    <string name="app_version">App Version</string>
    <string name="image">Image</string>
    <string name="company">Company</string>
    <string name="website">Website</string>
    <string name="contact">Contact</string>
    <string name="system_default">System Default</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="save">Save</string>
    <string name="clearing_cache">Clearing Cache..</string>
    <string name="cache_cleared">Cache Cleared</string>
    <string name="logout_success">Logout Success</string>
    <string name="comments">Comments</string>
    <string name="err_not_logged">Not Logged In</string>
    <string name="share">Share</string>
    <string name="favourite">Favourite</string>
    <string name="download">Download</string>
    <string name="my_downloads">My Downloads</string>
    <string name="report">Report</string>
    <string name="your_report_message">Your report message</string>
    <string name="err_login_to_continue">Login to continue</string>
    <string name="otp_sent_email">OTP sent in email</string>
    <string name="verify">Verify</string>
    <string name="resend">Re-Send</string>
    <string name="sending_verification_code">Sending Verification Code..</string>
    <string name="verifing_code">Verifying Code..</string>
    <string name="close">Close</string>
    <string name="err_verify_email">Verify your email address to continue</string>
    <string name="err_no_comments_found">No Comments Found</string>
    <string name="share_messages">Explore more videos, photos, and exciting content – download now!</string>
    <string name="images">Images</string>
    <string name="create_post">Create Post</string>
    <string name="add_post">Add Post</string>
    <string name="caption">Caption</string>
    <string name="upload">Upload</string>
    <string name="unfollow">Unfollow</string>
    <string name="image_posts">Image Posts</string>
    <string name="video_posts">Video Posts</string>
    <string name="your_posts">Your Posts</string>
    <string name="delete_my_account">Delete My Account</string>
    <string name="text_delete_acc">If you delete your account all your posts and other data will be deleted</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_us_text">Please enter your contact details and admin will soon contact you</string>
    <string name="message">Message</string>
    <string name="delete">Delete</string>
    <string name="sure_delete_ac">Are you sure you want to delete your account? All your data will be deleted</string>
    <string name="account_del_succ">Account Deleted Successfully</string>
    <string name="comment_del">Comment Deleted</string>
    <string name="subject">Subject</string>
    <string name="edit">Edit</string>
    <string name="tags">Tags</string>
    <string name="image_saved">Image Saved</string>
    <string name="error">Error</string>
    <string name="starting_download">Starting Download</string>
    <string name="sure_delete">Are you sure you want to delete?</string>
    <string name="verify_email">Verify Email</string>
    <string name="need_verify_email">You need to verify email address to access all features</string>
    <string name="verify_email_id">Verify Email ID</string>
    <string name="sure_exit">Are you sure you want to exit app</string>
    <string name="videos">Videos</string>
    <string name="video_long_select_short">Video too long, select short video</string>
    <string name="video_large_select_small">Video too large, select small video</string>
    <string name="err_no_video_found">No Video Found</string>
    <string name="err_no_image_found">No Image Found</string>
    <string name="sure_logout">Are you sure you want to logout?</string>
    <string name="sure_delete_post">Are you sure you want to delete this post? You will not be able to retrieve it</string>
    <string name="edit_cover">Edit Cover</string>
    <string name="write_captions">Write something in captions</string>
    <string name="uploading_">Uploading..</string>
    <string name="uploading_video">Uploading Video</string>
    <string name="uploading_image">Uploading Image</string>
    <string name="err_report_message_empty">Report message cannot be empty</string>
    <string name="err_phone_empty">Enter Phone Number</string>
    <string name="err_subject_empty">Subject cannot be empty</string>
    <string name="err_message_empty">Message cannot be empty</string>
    <string name="err_name_empty">Name cannot be empty</string>
    <string name="press_back_again">Press back again to exit</string>
    <string name="allow_noti_background_download">Allow notification permission for uploading in background</string>
    <string name="uploading_post">Uploading Post</string>
    <string name="uploading_complete">Uploading Completed</string>
    <string name="uploading_failed">Uploading Failed</string>
    <string name="uploading_started">Uploading post started</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address">Address</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="err_select_gender">Select Gender</string>
    <string name="err_email_not_verified">Email Not Verified</string>
    <string name="profile_completion">Profile Completion -</string>
    <string name="follow_request">Follow Request</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="share_profile">Share Profile</string>
    <string name="err_enter_birthdate">Enter your birthdate</string>
    <string name="bio">Bio</string>
    <string name="requested">Requested</string>
    <string name="post_upload">Post Upload</string>
    <string name="profile_is_private">Profile is private</string>
</resources>