<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_bottom_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_bottom_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />

    <item
        android:id="@+id/nav_bottom_add_post"
        android:icon="@drawable/ic_add_post"
        android:title="@string/settings" />

    <item
        android:id="@+id/nav_bottom_video"
        android:icon="@drawable/ic_video"
        android:title="@string/video" />

    <item
        android:id="@+id/nav_bottom_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />

</menu>