<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/view1"
        android:layout_width="40dp"
        android:layout_height="4dp"
        app:riv_corner_radius="20dp"
        android:background="@color/line_popup"
        app:riv_mutate_background="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <RadioGroup
        android:id="@+id/rg_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/view1">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_system_them"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/system_default"
            android:textColor="@color/text_dark"
            app:buttonTint="@color/primary"
            android:fontFamily="@font/outfit_medium" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_light_them"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/light"
            android:textColor="@color/text_dark"
            app:buttonTint="@color/primary"
            android:fontFamily="@font/outfit_medium" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_dark_them"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dark"
            android:textColor="@color/text_dark"
            app:buttonTint="@color/primary"
            android:fontFamily="@font/outfit_medium" />

    </RadioGroup>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/line_popup"
        app:layout_constraintTop_toBottomOf="@+id/rg_theme" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_theme_cancel"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/cancel"
        android:textColor="@color/text_dark"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/outfit_bold"
        app:strokeColor="@color/btn_cancel"
        app:cornerRadius="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toStartOf="@+id/btn_theme_save"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_theme_save"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/outfit_bold"
        app:backgroundTint="@color/primary"
        app:strokeColor="@color/btn_cancel"
        app:cornerRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintStart_toEndOf="@+id/btn_theme_cancel"
        style="@style/Widget.MaterialComponents.Button"/>

</androidx.constraintlayout.widget.ConstraintLayout>