<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/sign_up"
            android:textColor="@color/text_dark"
            android:textSize="22sp"
            android:fontFamily="@font/outfit_bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            app:boxBackgroundColor="@color/bg_edittext"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:hintEnabled="false"
            style="@style/TextInputLayoutStyle"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toBottomOf="@+id/tv1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/til_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_register_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:padding="15dp"
                android:textColor="@color/text_et_login"
                android:textSize="16sp"
                android:hint="@string/name"
                android:textColorHint="@color/text_et_hint"
                android:fontFamily="@font/outfit_medium"
                android:background="@null" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--Email-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:boxBackgroundColor="@color/bg_edittext"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:hintEnabled="false"
            style="@style/TextInputLayoutStyle"
            app:layout_constraintTop_toBottomOf="@+id/til_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tv_regis_birthdate">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="15dp"
                android:textColor="@color/text_et_login"
                android:textSize="16sp"
                android:hint="@string/email"
                android:textColorHint="@color/text_et_hint"
                android:fontFamily="@font/outfit_medium"
                android:background="@null" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_regis_birthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:hint="@string/date_of_birth"
            android:textColorHint="@color/text_et_hint"
            android:textColor="@color/text_et_hint"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_border_edittext"
            android:fontFamily="@font/outfit_medium"
            app:layout_constraintTop_toBottomOf="@+id/til_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/til_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:boxStrokeColor="@color/et_stroke"
            app:boxStrokeWidth="2dp"
            app:boxBackgroundColor="@color/bg_edittext"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            style="?attr/textInputOutlinedStyle"
            app:layout_constraintTop_toBottomOf="@+id/tv_regis_birthdate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/til_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="15dp"
                android:textColor="@color/text_et_login"
                android:textSize="16sp"
                android:hint="@string/password"
                android:textColorHint="@color/text_et_hint"
                android:fontFamily="@font/outfit_medium"
                android:background="@null" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:boxBackgroundColor="@color/bg_edittext"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:hintEnabled="false"
            style="@style/TextInputLayoutStyle"
            app:layout_constraintTop_toBottomOf="@+id/til_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/checkbox_register">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_register_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLines="1"
                android:padding="15dp"
                android:textColor="@color/text_et_login"
                android:textSize="16sp"
                android:hint="@string/phoneNo"
                android:textColorHint="@color/text_et_hint"
                android:fontFamily="@font/outfit_medium"
                android:background="@null" />

        </com.google.android.material.textfield.TextInputLayout>

        <cn.refactor.library.SmoothCheckBox
            android:id="@+id/checkbox_register"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="25dp"
            app:color_checked="@color/check_box_check_bg_login"
            app:color_tick="@color/check_box_tick_login"
            app:color_unchecked="@color/check_box_bg_login"
            app:color_unchecked_stroke="@color/check_box_circle_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/til_phone"
            app:layout_constraintBottom_toTopOf="@+id/button_register" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/read_terms"
            android:textColor="@color/text_et_login_bb"
            android:fontFamily="@font/outfit_medium"
            app:layout_constraintBottom_toBottomOf="@+id/checkbox_register"
            app:layout_constraintStart_toEndOf="@+id/checkbox_register"
            app:layout_constraintTop_toTopOf="@+id/checkbox_register" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_terms_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/terms_of_use"
            android:textColor="@color/primary"
            android:textSize="14sp"
            android:fontFamily="@font/outfit_bold"
            app:layout_constraintStart_toEndOf="@+id/tv3"
            app:layout_constraintTop_toTopOf="@+id/checkbox_register"
            app:layout_constraintBottom_toBottomOf="@id/checkbox_register"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_register"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="35dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:cornerRadius="8dp"
            app:backgroundTint="@color/button_bg"
            android:fontFamily="@font/outfit_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkbox_register"
            app:layout_constraintBottom_toTopOf="@+id/tv5" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="10dp"
            android:text="@string/already_have_an_account"
            android:textColor="@color/text_et_login"
            android:textSize="15sp"
            android:fontFamily="@font/outfit_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_register_login"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_register_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/sign_in"
            android:textColor="@color/primary"
            android:textSize="16sp"
            android:fontFamily="@font/outfit_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/tv5"
            app:layout_constraintStart_toEndOf="@+id/tv5"
            app:layout_constraintTop_toTopOf="@+id/tv5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>